--- a/Note/JavaScript/原型&原型链.md
+++ b/Note/JavaScript/原型&原型链.md
@@ -1,6 +1,6 @@
 # 搞清楚原型链以及原型链中的 Function 和 Object
 
-## Function Object 函数 对象
+## 原型&&原型链
 
 ```javascript
 //构造函数
@@ -39,5 +39,7 @@ console.log(
   'Object.__proto__===Function.__proto__'
 );
 ```
+
+## 原型链图例
 
 ![原型链.jpg](../../assets/images/原型链.jpg)
