--- a/Note/JavaScript/深拷贝.md
+++ b/Note/JavaScript/深拷贝.md
@@ -23,8 +23,11 @@ const obj = {
   },
   hobby: ['跑步', '爬山'],
 };
+```
 
-// ES5实现
+## ES5 实现
+
+```js
 function deepClone(origin, target) {
   var tar = target || {};
   var toStr = Object.prototype.toString;
@@ -48,9 +51,13 @@ function deepClone(origin, target) {
 const newObj = deepClone(obj);
 
 console.log(newObj);
+```
 
-//ES6实现
+## ES6 实现
+
+```js
 function deepClone(origin, hashMap = new WeakMap()) {
+  // 此处写origin == undefined是因为==下undefined和null是相等的
   if (typeof origin !== 'object' || origin == undefined) return origin;
 
   if (origin instanceof Date) {
