feat:更新时间&代码分组

--- a/Note/JavaScript/深拷贝.md
+++ b/Note/JavaScript/深拷贝.md
@@ -25,9 +25,11 @@ const obj = {
 };
 ```
 
-## ES5 实现
+## 具体实现
 
-```js
+::: code-group
+
+```js [ES5 实现]
 function deepClone(origin, target) {
   var tar = target || {};
   var toStr = Object.prototype.toString;
@@ -53,9 +55,7 @@ const newObj = deepClone(obj);
 console.log(newObj);
 ```
 
-## ES6 实现
-
-```js
+```js [ES6 实现]
 function deepClone(origin, hashMap = new WeakMap()) {
   // 此处写origin == undefined是因为==下undefined和null是相等的
   if (typeof origin !== 'object' || origin == undefined) return origin;
@@ -100,3 +100,5 @@ test1.a = test2;
 test2.b = test1;
 console.log(deepClone(test1));
 ```
+
+:::
