--- a/Note/JavaScript/重写数组方法.md
+++ b/Note/JavaScript/重写数组方法.md
@@ -25,9 +25,11 @@ function deepClone(origin, target) {
 }
 ```
 
-## 重写 forEach 方法
+## 具体实现
 
-```js
+::: code-group
+
+```js [重写 forEach 方法]
 Array.prototype.myForEach = function (callback) {
   var _arr = this;
   var _len = _arr.length;
@@ -39,9 +41,7 @@ Array.prototype.myForEach = function (callback) {
 };
 ```
 
-## 重写 map 方法
-
-```js
+```js [重写 map 方法]
 Array.prototype.myMap = function (callback) {
   var _arr = this;
   var _len = _arr.length;
@@ -60,9 +60,7 @@ Array.prototype.myMap = function (callback) {
 };
 ```
 
-## 重写 filter 方法
-
-```js
+```js [重写 filter 方法]
 Array.prototype.myFilter = function (callback) {
   var _arr = this;
   var _len = _arr.length;
@@ -82,9 +80,7 @@ Array.prototype.myFilter = function (callback) {
 };
 ```
 
-## 重写 every 方法
-
-```js
+```js [重写 every 方法]
 Array.prototype.myEvery = function (callback) {
   var _arr = this;
   var _len = _arr.length;
@@ -99,9 +95,7 @@ Array.prototype.myEvery = function (callback) {
 };
 ```
 
-## 重写 some 方法
-
-```js
+```js [重写 some 方法]
 Array.prototype.mySome = function (callback) {
   var _arr = this;
   var _len = _arr.length;
@@ -116,9 +110,7 @@ Array.prototype.mySome = function (callback) {
 };
 ```
 
-## 重写 reduce 方法
-
-```js
+```js [重写 reduce 方法]
 Array.prototype.myReduce = function (callback, initialValue) {
   var _arr = this;
   var _len = _arr.length;
@@ -134,9 +126,7 @@ Array.prototype.myReduce = function (callback, initialValue) {
 };
 ```
 
-## 重写 reduceRight 方法
-
-```js
+```js [重写 reduceRight 方法]
 Array.prototype.myReduceRight = function (callback, initialValue) {
   var _arr = this;
   var _len = _arr.length;
@@ -151,3 +141,5 @@ Array.prototype.myReduceRight = function (callback, initialValue) {
   return initialValue;
 };
 ```
+
+:::
