--- a/Note/CSS/三栏布局.md
+++ b/Note/CSS/三栏布局.md
@@ -74,7 +74,7 @@
 ## 圣杯布局
 
 - 此布局最后还需要给整体的容器设置一个最小宽度，否则宽度过小会出现布局混乱,一般写在 html 或 body 上
-- 最小宽度计算方式一般为 left+right+left，因为在相对定位下，元素先放置在未添加定位时的位置，再在不改变页面布局的前提下调整元素位置（因此会在此元素未添加定位时所在位置留下空白），也就相当于虽然盒子被移走，但此处仍然有个占用宽度为left宽度的空白，而我们移动的距离刚好是left的宽度，所以此时至少要留下两个left的宽度+right的宽度才能保证盒子的布局不会混乱
+- 最小宽度计算方式一般为 left+right+left，因为在相对定位下，元素先放置在未添加定位时的位置，再在不改变页面布局的前提下调整元素位置（因此会在此元素未添加定位时所在位置留下空白），也就相当于虽然盒子被移走，但此处仍然有个占用宽度为 left 宽度的空白，而我们移动的距离刚好是 left 的宽度，所以此时至少要留下两个 left 的宽度+right 的宽度才能保证盒子的布局不会混乱
 <div class="b-box">
   <div class="b-header">header</div>
     <div class="b-page">
@@ -180,7 +180,19 @@
   .b-right {
     width: 100px;
     background-color: green;
+    /* 
+    这种写法是因为当他margin-right: -100px;时，在外界看来他没有宽度了，所以就上去了
+    */
     margin-right: -100px;
+    /* 
+    下边这种写法不用在min-width中加上此处相对定位后空白right的宽度
+    这是因为相对定位向左移动后margin-left又将元素移动回原地了,又覆盖在了原本right上
+    但是对于center来说，此时right和上边一样也是没有宽度了，所以他就自然而然移动上去了
+    在视觉上宽度依然存在，此处比较抽象
+    */
+    /* position: relative;
+    left: 100px;
+    margin-left: -100px; */
   }
 
   .b-footer {
