--- a/Note/CSS/三栏布局.md
+++ b/Note/CSS/三栏布局.md
@@ -133,15 +133,21 @@
 </style>
 
 ```html
-<div class="b-header">header</div>
-<div class="b-page">
-  <div class="b-center b">center</div>
-  <div class="b-left b">left</div>
-  <div class="b-right b">right</div>
+<div class="b-box">
+  <div class="b-header">header</div>
+  <div class="b-page">
+    <div class="b-center b">center</div>
+    <div class="b-left b">left</div>
+    <div class="b-right b">right</div>
+  </div>
+  <div class="b-footer">footer</div>
 </div>
-<div class="b-footer">footer</div>
 
 <style scoped>
+  .b-box {
+    min-width: 400px;
+  }
+
   .b-header {
     width: 100%;
     height: 20px;
