--- a/Note/JavaScript/原型&原型链.md
+++ b/Note/JavaScript/原型&原型链.md
@@ -1,5 +1,10 @@
 # 搞清楚原型链以及原型链中的 Function 和 Object
 
+::: info 鸡蛋问题
+此处涉及到到底是先有 Object 还是先有 Function,我的看法是 Function 先于 Object
+
+:::
+
 ## 原型&&原型链
 
 ```javascript
