--- a/Note/JavaScript/事件捕获&事件冒泡.md
+++ b/Note/JavaScript/事件捕获&事件冒泡.md
@@ -86,3 +86,4 @@ document -> html -> body -> outer -> inner
 
 开发中事件冒泡使用较多，比如事件代理，就用到了事件冒泡。
 
+事件捕获到的地方较少，但也有用，比如我需要在outer元素的捕获阶段判断条件是否成立，不成立则调用`e.stopPropagation()`阻止事件冒泡，这样就不会触发inner元素上的事件了。
