--- a/Note/JavaScript/与或操作符的返回值.md
+++ b/Note/JavaScript/与或操作符的返回值.md
@@ -5,7 +5,7 @@
 :::
 
 - 对于 || 来说，如果条件判断结果为 true 就返回第一个操作数的值，如果为 false 就返回第二个操作数的值。
-  - 当有多个表达式时，若第一个表达式返回值不成立，继续判断第二个表达式的值，若第二个不成立,那就继续判断，直到中间有任意表达式成立则返回该表达式的值，或者判断到最后一个表达式，返回最后一个表达式的值。
+  - 当有多个表达式时，若第一个表达式返回值不成立（即为假值），则继续判断第二个表达式的值；若第二个表达式也不成立，则继续判断下一个表达式的值，依此类推，直到找到一个成立（即为真值）的表达式，则返回该表达式的值。如果所有表达式都不成立，则返回最后一个表达式的值。
 - && 则相反，如果条件判断结果为 true 就返回第二个操作数的值，如果为 false 就返回第一个操作数的值。
-  - 当有多个表达式时，若第一个表达式返回值成立，则返回第二个表达式的值，第二个成立则返回第三个表达式的值，以此类推，直到中间遇到不成立的表达式，返回该表达式的值，或者判断到最后一个表达式，返回最后一个表达式的值。
+  - 当有多个表达式时，若第一个表达式返回值成立（即为真值），则继续判断下一个表达式的值；若下一个表达式也成立，则继续判断下一个表达式的值，依此类推，直到遇到一个不成立（即为假值）的表达式，则返回该表达式的值。如果所有表达式都成立，则返回最后一个表达式的值。
 > 总结：|| 和 && 返回它们其中一个操作数的值，而非条件判断的结果
