--- a/Note/JavaScript/继承.md
+++ b/Note/JavaScript/继承.md
@@ -8,6 +8,10 @@
 继承可以使得子类别具有父类的各种方法和属性，比如上面的例子中“轿车” 和 “货车” 分别继承了汽车的属性，而不需要再次在“轿车”中定义汽车已经有的属性。在“轿车”继承“汽车”的同时，也可以重新定义汽车的某些属性，并重写或覆盖某些属性和方法，使其获得与“汽车”这个父类不同的属性和方法。
 :::
 
+::: warning 注意
+在 JavaScript 中，当你多次使用 new 关键字创建一个构造函数的实例时，每个实例都有自己独立的实例属性，但它们共享同一个原型对象。这意味着如果你修改了原型对象上的属性，那么所有实例都会受到影响，因为它们都指向同一个原型对象。
+:::
+
 ## ES5 实现继承
 
 ### 原型链继承
